# PySSL

./: .gitignore  README.md
Client/: CMakeLists.txt
Client/plugins/sim/: CMakeLists.txt  configwidget.cpp  sslworld.cpp
Client/src/: actionmodule.cpp  actionmodule.h  actionmodule_nan.cpp  communicator.cpp  communicator.h  field.cpp  interaction.cpp  interaction.h  rec_player.cpp  rec_recorder.cpp  simmodule.cpp  simmodule.h  simulator.cpp  simulator.h
Client/src/proto/: zss_rec.proto  zss_train.proto
Client/src/qml/: ControlBoard.qml  main.qml
Client/src/share/: staticparams.h
Client/src/utils/: KunDebugEngine.cpp  globaldata.cpp  zsplugin.hpp
Client/src/vision/: dealrobot.cpp  visionmodule.cpp  visionmodule.h
Demo/1_4/: README.md  crazy.py  interaction.py
Main/: .gitignore  README.md  boost_python37-vc140-mt-x64-1_67.lib  interaction.py  setup.py
Main/lib/: cmdItf.pyd
Main/qml/: main.qml
Main/visionIf/: visionIf.pyd
Module/: README.md  setup.py
Module/cmdIf/: __init__.py  cmdIf.pyd
Module/pyssl/: __init__.py
Module/pyssl/visionIf/: visionIf.pyd
Module/visionIf/: __init__.py  visionIf.pyd
ModuleSrc/cmdIf/: CMakeLists.txt  CommandInterface.cpp  CommandInterface.h  pymodule.cc
ModuleSrc/cmdIf/src/: param.cpp  param.h
ModuleSrc/visionIf/: .gitignore  CMakeLists.txt  pymodule.cc  visionmodule.cpp  visionmodule.h
